--- a/src/sass/_modal-product-card.scss
+++ b/src/sass/_modal-product-card.scss
@@ -1,6 +1,6 @@
 
 .modal.container.ingred {
-  @media screen and (max-width: 767.99px) {
+  @media screen and (max-width: 767px) {
     padding: 0 28px;
   }
 
@@ -10,15 +10,11 @@
 }
 
 .modal-title.modal-buy-now {
-  // font-family: 'Seymour One';
-    // font-style: normal;
-    // font-weight: 400;
-  
-  @media screen and (max-width: 767.99px) {
+  @media screen and (max-width: 767px) {
     font-size: 16px;
     line-height: 1.5;
   }
-    
+
   font-size: 16px;
   line-height: 1.5;
 }
@@ -29,7 +25,6 @@
   justify-content: center;
   margin-top: 106px;
   gap: 100px 32px;
-
 }
 
 .modal-products-item {
@@ -38,28 +33,26 @@
   row-gap: 32px;
 }
 
-.send-form-checkbox{
+.send-form-checkbox {
   position: absolute;
 }
 
 
-.prod-card .modal-img-container{
+.prod-card .modal-img-container {
   position: absolute;
-  top: -96px;  
+  top: -100px;
 }
 
 .modal-product-1,
 .modal-product-2,
 .modal-product-3 {
-  // position: relative;
-  // bottom: -1px;
-  width: 128px;
+  width: 132px;
   display: flex;
   align-items: flex-end;
   justify-content: center;
 
   padding: 20px 0;
-  height: 85px; 
+  height: 114px;
 
   border-radius: 15px;
 }
@@ -67,7 +60,7 @@
 
 .modal-product-1 {
   border: 2px solid #96AF8C;
-  filter: drop-shadow(0px 5.26027px 19.726px rgba(212, 20, 67, 0.1));  
+  filter: drop-shadow(0px 5.26027px 19.726px rgba(212, 20, 67, 0.1));
 }
 
 .modal-product-2 {
@@ -81,27 +74,24 @@
   filter: drop-shadow(0px 5.26027px 19.726px rgba(212, 20, 67, 0.1));
 }
 
-.modal-product-name{
+.modal-product-name {
   margin: 0;
-  // margin-top: 86px;
-  font-family: 'Montserrat';
-    // font-style: normal;
+  font-family: var(--primary-font);
   font-weight: 700;
   font-size: 16px;
   line-height: 1.25;
-  
-    // text-align: center;
+
   letter-spacing: 0.04em;
   text-transform: uppercase;
-  
+
   color: #131313;
 }
 
 .modal-products {
-  @media screen and (max-width: 767.99px) {
+  @media screen and (max-width: 767px) {
     margin-bottom: 31px;
   }
-  
+
   @media screen and (min-width: 768px) {
     margin-bottom: 40px;
   }
@@ -109,9 +99,7 @@
 
 .modal-send-form-input,
 .modal-send-form-textarea {
-  font-family: 'Montserrat';
-  // font-style: normal;
-  // font-weight: 400;
+  font-family: var(--primary-font);
   font-size: 14px;
   line-height: 1.4;
   color: #131313;
@@ -119,4 +107,12 @@
   background: rgba(248, 210, 78, 0.1);
   border: 1px solid #84A178;
   border-radius: 10px;
+}
+
+.modal-send-form-input:focus,
+.modal-send-form-textarea:focus,
+.modal-send-form-input:active,
+.modal-send-form-textarea:active {
+  outline: none;
+  border-color: #F8D24E;
 }
