Created new repository
Створено новий репозиторій і завантажено з останніми змінами

--- a/src/partials/header.html
+++ b/src/partials/header.html
@@ -68,7 +68,7 @@
           <a href="#contacts" class="header-nav-link-mobile link">Contact</a>
         </li>
       </ul>
-      <button type="button" class="header-button-mobile">
+      <button type="button" class="header-button-mobile js-open-modal" data-modal="2">
         Buy now
         <svg class="header-button-mobile-icon" width="12" height="12">
           <use href="./images/sprite.svg#icon-arrow-right-bold"></use>
