--- a/src/partials/modal-ingredients2.html
+++ b/src/partials/modal-ingredients2.html
@@ -1,26 +1,26 @@
 
-<!--MODAL INGREDIENT1-->
+<!--MODAL INGREDIENT3-->
 
-<body>
-    <section class="modal container ingred modal-product_1" data-modal="0">      
+  <body>
+    <section class="modal container ingred modal-product_3" data-modal="6">      
       <!-- Close button -->
       <button type="button" class="modal-close-btn js-modal-close">
           <svg class="modal-close-btn-icon">
             <use href="./images/sprite.svg#icon-close-line"></use>
           </svg>
-      </button> 
-
+      </button>
+      
       <!-- Main section -->
-      <h1 class="modal-title">Chololate icecream</h1>
+      <h1 class="modal-title">Milkshakes</h1>
       <picture>
         <div class="modal-img-container modal-ingredient">
-          <source srcset="./images/modal-product.webp 1x, ./images/modal-product@2x.webp 2x,
-              ./images/modal-product@3x.webp 3x" media="(min-width:1200px)"
-                type="image/webp">
-          <source srcset="./images/modal-product@2x.png 2x, ./images/modal-product@2x.png 2x" media="(min-width:1200px)" >
-          <img class="modal-img-product" src="./images/modal-product.png" alt="Chololate icecream">
+          <source srcset="./images/modal-product3.webp 1x, ./images/modal-product3@2x.webp 2x,
+              ./images/modal-product3@3x.webp 3x" media="(min-width:1200px)"
+              type="image/webp">
+          <source srcset="./images/modal-product3@2x.png 2x, ./images/modal-product3@3x.png 3x" media="(min-width:1200px)" >
+          <img class="modal-img-product" src="./images/modal-product3.png" alt="Chololate icecream">
         </div>
-      </picture>            
+      </picture>      
       
       <!-- Nutritional value -->
       <h2 class="visually-hidden">Nutritional value</h2>
