--- a/src/sass/_modal-all.scss
+++ b/src/sass/_modal-all.scss
@@ -3,6 +3,10 @@
   --transition-dur-and-timing-fun: 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
+// .modal-body:focus{
+//   overflow: hidden;
+// }
+
 .visually-hidden {
   position: absolute;
   white-space: nowrap;
@@ -24,12 +28,11 @@
   position: fixed;
   top: 0;
   left: 0;
-
   width: 100%;
   height: 100%;
-
   background-color: rgba(0, 0, 0, .5);
   z-index: 520;
+  overflow:hidden;
   
   transition: opacity var(--transition-dur-and-timing-fun);
   -webkit-transition: opacity var(--transition-dur-and-timing-fun);
@@ -38,32 +41,52 @@
 
 /* style modal windows*/
 .modal {
-  opacity: 0;
-  visibility: hidden;
-  width: 100%;
+  @media screen and (max-width: 767px) {
+    padding-top: 28px;
+    height: 100vh;
+  }
+  
+  @media screen and (min-width: 768px) {
+    mapadding-top: 32px;
+  }
 
+  opacity: 0;
+  visibility: hidden;  
+  max-height: 1050px;
+  
   position: fixed;
   top: 50%;
   left: 50%;
-
   transform: translate(-50%, -50%);
-  z-index: 530;
-  
+  z-index: 1030;
   text-align: center;
+  pointer-events: none;
+  overflow-y: auto;
+
   transition: opacity var(--transition-dur-and-timing-fun);
   -webkit-transition: opacity var(--transition-dur-and-timing-fun);
   -moz-transition: opacity var(--transition-dur-and-timing-fun);
 }
 
-/* Стили для активных классов подложки и окна */
+.modal .ingred { 
+@media screen and (min-width: 768px) {
+    height: 100vh;
+  }
+}
+
+.modal .prod-card{
+  height: 644px;    
+}
+
+/* Styles for active watermark and window classes*/
 .modal.active,
 .overlay.active {
   opacity: 1;
   visibility: visible;
+  pointer-events: auto;
 }
 
-/* Стили для кнопки закрытия */
-// .modal__cross {
+/* Styles for the close button */
 .modal-close-btn {
   position: absolute;
   top: 12px;
@@ -76,10 +99,12 @@
   list-style: none;
   fill: #131313;
   cursor: pointer;
+  border-radius: 50%;
+
   background-color: #fcfcfc;
   border: 0;
 
-  @media screen and (max-width: 767.99px) {
+  @media screen and (max-width: 767px) {
     width: 20px;
     height: 20px;
   }
@@ -91,31 +116,34 @@
 }
 
 .modal-close-btn-icon{
-  @media screen and (max-width: 767.99px) {
-    width: 11px;
-    height: 11px;
+  @media screen and (max-width: 767px) {
+    width: 20px;
+    height: 20px;
   }
 
   @media screen and (min-width: 768px) {
-    width: 14px;
-    height: 14px;
-  }
-  
+    width: 24px;
+    height: 24px;
+  }  
 }
 
-/* Стили для кнопок. */
-.btn {
-  padding: 20px;
-  display: inline-block;
-  text-decoration: none;
-  background-color: #414b52;
-  margin: 10px;
-  color: #fff;
-  border-radius: 3px;
+.modal-close-btn:active,
+.modal-close-btn:focus {
+  box-shadow: 0px 1px 6px rgba(46, 47, 66, 0.08),
+    0px 1px 1px rgba(46, 47, 66, 0.16),
+    0px 2px 1px rgba(46, 47, 66, 0.08);
+  border-radius: 4px;
 }
+
+.modal-close-btn:hover {
+  background: linear-gradient(0deg, rgba(38, 156, 40, 0.7),
+   rgba(36, 151, 36, 0.7)), #D9D9D9;
+  box-shadow: 0px 8px 30px rgba(153, 114, 23, 0.25);
+}
+
 
 .modal.container {
-  @media screen and (max-width: 767.99px) {
+  @media screen and (max-width: 767px) {
     max-width: 280px;
   }
 
@@ -134,7 +162,7 @@
   text-align: center;
   justify-content: center;
 
-  @media screen and (max-width: 767.99px) {
+  @media screen and (max-width: 767px) {
     margin-top: 28px;
   }
   
@@ -142,9 +170,7 @@
     margin-top: 32px;
   }
   
-  font-family: 'Seymour One';
-  // font-style: normal;
-  // font-weight: 400; 
+  font-family: var(--secondary-font); 
   font-size: 20px;
   line-height: 1.4;
 
@@ -156,16 +182,18 @@
   flex-direction: column;
 }
 
-.modal-send-form-input,
-.modal-send-form-textarea {
-  font-family: 'Montserrat';
-    // font-style: normal;
-    // font-weight: 400;
+.modal-send-form-input{
+  font-family: var(--primary-font);
   font-size: 14px;
-  line-height: 1.4;   
+  line-height: 1.4; 
+  
   color: #131313;
-
-  background: rgba(248, 210, 78, 0.1);
-  border: 1px solid #84A178;
-  border-radius: 10px;
 }
+
+input:valid:not(:placeholder-shown) {
+    border-color: green;
+  }
+
+input:invalid:not(:placeholder-shown) {
+    border-color: red;
+  }
