--- a/src/partials/contacts.html
+++ b/src/partials/contacts.html
@@ -87,7 +87,7 @@
       </li>
     </ul>
     <div class="contacts-buttons-wrapper">
-      <button type="button" class="contacts-btn js-open-modal " data-moda="4">
+      <button type="button" class="contacts-btn js-open-modal" data-modal="4">
           Our Locations
           <svg width="12" height="12">
             <use href="./images/sprite.svg#icon-arrow-right-bold"></use>
