--- a/src/sass/_modal-ingredients.scss
+++ b/src/sass/_modal-ingredients.scss
@@ -1,12 +1,15 @@
 
 .modal.container.ingred{
   @media screen and (max-width: 767px) {
-    padding: 0 20px;
+    padding: 28px 20px;
   }
 
   @media screen and (min-width: 768px) {
-    padding: 0 40px;
+    padding: 32px 40px;
+    height: 100vh;
   }
+
+  overflow-y: auto;
 }
 
 .ingred .modal-title {
@@ -132,14 +135,6 @@
     margin: 48px auto;
   }
 }
-
-.modal .ingred {
-  // height: 100%;
-  // max-height: 1050px;
-  height: 1050px;
-  overflow-y: auto;
-}
-
 
 .modal-ingredients-title {
   // font-family: 'Montserrat';
