--- a/src/sass/_modal-product-card.scss
+++ b/src/sass/_modal-product-card.scss
@@ -1,12 +1,6 @@
 
-.modal.container.ingred {
-  @media screen and (max-width: 767px) {
-    padding: 0 28px;
-  }
-
-  @media screen and (min-width: 768px) {
-    padding: 0 40px;
-  }
+.modal .prod-card {
+  height: 644px;
 }
 
 .modal-title.modal-buy-now {
@@ -37,7 +31,6 @@
   position: absolute;
 }
 
-
 .prod-card .modal-img-container {
   position: absolute;
   top: -100px;
@@ -56,7 +49,6 @@
 
   border-radius: 15px;
 }
-
 
 .modal-product-1 {
   border: 2px solid #96AF8C;
