--- a/src/sass/_footer.scss
+++ b/src/sass/_footer.scss
@@ -128,6 +128,10 @@ p {
 .footer-phone-number {
   color: #fcfcfc;
 }
+.footer-phone-number:hover,
+.footer-phone-number:focus{
+  color:#0a8817;
+}
 .footer-string {
   display: block;
   border-top: 1px solid #e1e1e1;
