--- a/src/partials/customer-reviews.html
+++ b/src/partials/customer-reviews.html
@@ -1,119 +1,107 @@
 <h2 class="visibility-hidden">Customer reviews</h2>
 
 <div class="gallery-reviews-wrapper reviews">
-  <ul class="reviews-list">
-    <div class="swiper mySwiper2">
-        <div class="swiper-wrapper">
-          <div class="swiper-slide reviews-item">
-            <li class="reviews-item">
-                <picture class="">
-                  <source
-                    media="(min-width: 320px)"
-                    srcset="
-                      ./images/reviews/review-1-@1x-85.webp  1x,
-                      ./images/reviews/review-1-@2x-170.webp 2x
-                    "
-                    type="image/webp"
-                  />
-                  <source
-                    media="(min-width: 320px)"
-                    srcset="
-                      ./images/reviews/review-1-@1x-85.jpg  1x,
-                      ./images/reviews/review-1-@2x-170.jpg 2x
-                    "
-                    type="image/jpg"
-                  />
-                  <img
-                    class="reviews-image"
-                    src="./images/reviews/review-1-@1x-85.jpg"
-                    alt=""
-                    width="85"
-                    height="85"
-                  />
-                </picture>
-                <p class="reviews-text">
-                  I love visiting your cafe. You prepare the most delicious ice cream in
-                  Los Angeles! In addition, you have beautiful serving, cozy atmosphere
-                  and polite staff.
-                </p>
-                <h3 class="reviews-name">Emily, Los Angeles</h3>
-              </li>
-          </div>
-          <div class="swiper-slide reviews-item">
-            <li class="reviews-item">
-                <picture>
-                  <source
-                    media="(min-width: 320px)"
-                    srcset="
-                      ./images/reviews/review-2-@1x-85.webp  1x,
-                      ./images/reviews/review-2-@2x-170.webp 2x
-                    "
-                    type="image/webp"
-                  />
-                  <source
-                    media="(min-width: 320px)"
-                    srcset="
-                      ./images/reviews/review-2-@1x-85.jpg  1x,
-                      ./images/reviews/review-2-@2x-170.jpg 2x
-                    "
-                    type="image/jpg"
-                  />
-                  <img
-                    class="reviews-image"
-                    src="./images/reviews/review-2-@1x-85.jpg"
-                    alt=""
-                    width="85"
-                    height="85"
-                  />
-                </picture>
-                <p class="reviews-text">
-                  Every day we come to you with friends after classes in college. We love
-                  your ice cream and casual atmosphere!
-                </p>
-                <h3 class="reviews-name">Bryan, New-York</h3>
-              </li>
-          </div>
-          <div class="swiper-slide reviews-item">
-            <li class="reviews-item">
-                <picture>
-                  <source
-                    media="(min-width: 320px)"
-                    srcset="
-                      ./images/reviews/review-3-@1x-85.webp  1x,
-                      ./images/reviews/review-3-@2x-170.webp 2x
-                    "
-                    type="image/webp"
-                  />
-                  <source
-                    media="(min-width: 320px)"
-                    srcset="
-                      ./images/reviews/review-3-@1x-85.jpg  1x,
-                      ./images/reviews/review-3-@2x-170.jpg 2x
-                    "
-                    type="image/jpg"
-                  />
-                  <img
-                    class="reviews-image"
-                    src="./images/reviews/review-3-@1x-85.jpg"
-                    alt=""
-                    width="85"
-                    height="85"
-                  />
-                </picture>
-                <p class="reviews-text">
-                  Ice cream is my passion! I love your chocolate hazelnut ice cream! And I
-                  really like the excellent service - always served politely and quickly!
-                </p>
-                <h3 class="reviews-name">Diana, Chicago</h3>
-              </li>
-          </div>
-          
-        </div>
-        <div class="swiper-pagination"></div>
+  <div class="swiper mySwiper2">
+    <div class="swiper-wrapper reviews-list">
+      <div class="swiper-slide reviews-item">
+        <picture class="">
+          <source
+            media="(min-width: 320px)"
+            srcset="
+              ./images/reviews/review-1-@1x-85.webp  1x,
+              ./images/reviews/review-1-@2x-170.webp 2x
+            "
+            type="image/webp"
+          />
+          <source
+            media="(min-width: 320px)"
+            srcset="
+              ./images/reviews/review-1-@1x-85.jpg  1x,
+              ./images/reviews/review-1-@2x-170.jpg 2x
+            "
+            type="image/jpg"
+          />
+          <img
+            class="reviews-image"
+            src="./images/reviews/review-1-@1x-85.jpg"
+            alt=""
+            width="85"
+            height="85"
+          />
+        </picture>
+        <p class="reviews-text">
+          I love visiting your cafe. You prepare the most delicious ice cream in
+          Los Angeles! In addition, you have beautiful serving, cozy atmosphere
+          and polite staff.
+        </p>
+        <h3 class="reviews-name">Emily, Los Angeles</h3>
       </div>
-      
-  
-    
-    
-  </ul>
+      <div class="swiper-slide reviews-item">
+        <picture>
+          <source
+            media="(min-width: 320px)"
+            srcset="
+              ./images/reviews/review-2-@1x-85.webp  1x,
+              ./images/reviews/review-2-@2x-170.webp 2x
+            "
+            type="image/webp"
+          />
+          <source
+            media="(min-width: 320px)"
+            srcset="
+              ./images/reviews/review-2-@1x-85.jpg  1x,
+              ./images/reviews/review-2-@2x-170.jpg 2x
+            "
+            type="image/jpg"
+          />
+          <img
+            class="reviews-image"
+            src="./images/reviews/review-2-@1x-85.jpg"
+            alt=""
+            width="85"
+            height="85"
+          />
+        </picture>
+        <p class="reviews-text">
+          Every day we come to you with friends after classes in college. We
+          love your ice cream and casual atmosphere!
+        </p>
+        <h3 class="reviews-name">Bryan, New-York</h3>
+      </div>
+      <div class="swiper-slide reviews-item">
+        <picture>
+          <source
+            media="(min-width: 320px)"
+            srcset="
+              ./images/reviews/review-3-@1x-85.webp  1x,
+              ./images/reviews/review-3-@2x-170.webp 2x
+            "
+            type="image/webp"
+          />
+          <source
+            media="(min-width: 320px)"
+            srcset="
+              ./images/reviews/review-3-@1x-85.jpg  1x,
+              ./images/reviews/review-3-@2x-170.jpg 2x
+            "
+            type="image/jpg"
+          />
+          <img
+            class="reviews-image"
+            src="./images/reviews/review-3-@1x-85.jpg"
+            alt=""
+            width="85"
+            height="85"
+          />
+        </picture>
+        <p class="reviews-text">
+          Ice cream is my passion! I love your chocolate hazelnut ice cream! And
+          I really like the excellent service - always served politely and
+          quickly!
+        </p>
+        <h3 class="reviews-name">Diana, Chicago</h3>
+      </div>
+    </div>
+    <div class="swiper-pagination"></div>
+  </div>
 </div>
