--- a/src/sass/_cursor.scss
+++ b/src/sass/_cursor.scss
@@ -1,17 +1,17 @@
 html {
-  cursor: url('../images/cursor/cursor-auto-@1x.png'), auto;
+  cursor: url('../images/cursor/cursor-auto-@1x.png'), pointer;
 
   @supports (cursor: url('data:image/webp'), auto) {
-    cursor: url('../images/cursor/cursor-auto-@1x.webp'), auto;
+    cursor: url('../images/cursor/cursor-auto-@1x.webp'), pointer;
   }
 
   @media (min-device-pixel-ratio: 2),
     (min-resolution: 192dpi),
     (min-resolution: 2dppx) {
-    cursor: url('../images/cursor/cursor-auto-@2x.png'), auto;
+    cursor: url('../images/cursor/cursor-auto-@2x.png'), pointer;
 
     @supports (cursor: url('data:image/webp'), auto) {
-      cursor: url('../images/cursor/cursor-auto-@2x.webp'), auto;
+      cursor: url('../images/cursor/cursor-auto-@2x.webp'), pointer;
     }
   }
 }
@@ -22,19 +22,19 @@ textarea,
 input,
 svg,
 .swiper .mySwiper1 {
-  cursor: url('../images/cursor/cursor-pointer-@1x.png'), auto;
+  cursor: url('../images/cursor/cursor-pointer-@1x.png'), pointer;
 
   @supports (cursor: url('data:image/webp'), auto) {
-    cursor: url('../images/cursor/cursor-pointer-@1x.webp'), auto;
+    cursor: url('../images/cursor/cursor-pointer-@1x.webp'), pointer;
   }
 
   @media (min-device-pixel-ratio: 2),
     (min-resolution: 192dpi),
     (min-resolution: 2dppx) {
-    cursor: url('../images/cursor/cursor-pointer-@2x.png'), auto;
+    cursor: url('../images/cursor/cursor-pointer-@2x.png'), pointer;
 
     @supports (cursor: url('data:image/webp'), auto) {
-      cursor: url('../images/cursor/cursor-pointer-@2x.webp'), auto;
+      cursor: url('../images/cursor/cursor-pointer-@2x.webp'), pointer;
     }
   }
 }
