--- a/src/sass/_cursor.scss
+++ b/src/sass/_cursor.scss
@@ -1,19 +1,19 @@
 html {
   cursor: url('../images/cursor/cursor-auto-@1x.png'), pointer;
 
-  @supports (cursor: url('data:image/webp'), auto) {
+  @supports (cursor: url('data:image/webp'), 64px 64px auto) {
     cursor: url('../images/cursor/cursor-auto-@1x.webp'), pointer;
   }
 
-  @media (min-device-pixel-ratio: 2),
-    (min-resolution: 192dpi),
-    (min-resolution: 2dppx) {
-    cursor: url('../images/cursor/cursor-auto-@2x.png'), pointer;
+  // @media (min-device-pixel-ratio: 2),
+  //   (min-resolution: 192dpi),
+  //   (min-resolution: 2dppx) {
+  //   cursor: url('../images/cursor/cursor-auto-@2x.png'), pointer;
 
-    @supports (cursor: url('data:image/webp'), auto) {
-      cursor: url('../images/cursor/cursor-auto-@2x.webp'), pointer;
-    }
-  }
+  //   @supports (cursor: url('data:image/webp'), auto) {
+  //     cursor: url('../images/cursor/cursor-auto-@2x.webp'), pointer;
+  //   }
+  // }
 }
 
 a,
@@ -28,13 +28,13 @@ svg,
     cursor: url('../images/cursor/cursor-pointer-@1x.webp'), pointer;
   }
 
-  @media (min-device-pixel-ratio: 2),
-    (min-resolution: 192dpi),
-    (min-resolution: 2dppx) {
-    cursor: url('../images/cursor/cursor-pointer-@2x.png'), pointer;
+  // @media (min-device-pixel-ratio: 2),
+  //   (min-resolution: 192dpi),
+  //   (min-resolution: 2dppx) {
+  //   cursor: url('../images/cursor/cursor-pointer-@2x.png'), pointer;
 
-    @supports (cursor: url('data:image/webp'), auto) {
-      cursor: url('../images/cursor/cursor-pointer-@2x.webp'), pointer;
-    }
-  }
+  //   @supports (cursor: url('data:image/webp'), auto) {
+  //     cursor: url('../images/cursor/cursor-pointer-@2x.webp'), pointer;
+  //   }
+  // }
 }
