--- a/src/partials/contacts.html
+++ b/src/partials/contacts.html
@@ -23,7 +23,7 @@
             >
           </li>
           <li class="menu-item-contacts">
-            <a href="maito:noreply@envato.com" class="contacts-phone-mail"
+            <a href="mailto:noreply@envato.com" class="contacts-phone-mail"
               >noreply@envato.com</a
             >
           </li>
@@ -52,7 +52,7 @@
             >
           </li>
           <li class="menu-item-contacts">
-            <a href="maito:noreply@envato.com" class="contacts-phone-mail"
+            <a href="mailto:noreply@envato.com" class="contacts-phone-mail"
               >noreply@envato.com</a
             >
           </li>
@@ -79,7 +79,7 @@
             >
           </li>
           <li class="menu-item-contacts">
-            <a href="maito:noreply@envato.com" class="contacts-phone-mail"
+            <a href="mailto:noreply@envato.com" class="contacts-phone-mail"
               >noreply@envato.com</a
             >
           </li>
