--- a/src/partials/header.html
+++ b/src/partials/header.html
@@ -52,7 +52,7 @@
       </a>
       <ul class="header-site-nav-mobile list">
         <li class="header-item-mobile">
-          <a href="#Home" class="header-nav-link-mobile link">Home</a>
+          <a href="#home" class="header-nav-link-mobile link">Home</a>
         </li>
         <li class="header-item-mobile">
           <a href="#about" class="header-nav-link-mobile link"
