--- a/src/sass/_modal-franchise.scss
+++ b/src/sass/_modal-franchise.scss
@@ -37,7 +37,7 @@
   left: 50%;
   transform: translate(-50%, -50%) scale(1);
   transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
-  height: auto;
+  height: 100%;
   z-index: 999;
   background-color: #fff;
   border: 2px solid rgba(248, 210, 78, 1);
