--- a/src/sass/_modal-ingredients.scss
+++ b/src/sass/_modal-ingredients.scss
@@ -6,7 +6,7 @@
 
   @media screen and (min-width: 768px) {
     padding: 32px 40px;
-    height: 100vh;
+    height: 100%;
   }
 
   overflow-y: auto;
@@ -15,6 +15,7 @@
 .ingred .modal-title {
   @media screen and (max-width: 767px) {
     width: 145px;
+    height: 100%;
     margin-left: auto;
     margin-right: auto;
   }
